--- a/app/src/main/res/layout/ingrediant_iteam.xml
+++ b/app/src/main/res/layout/ingrediant_iteam.xml
@@ -26,8 +26,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
-        android:textColor="#A4FFFFFF"
         android:textSize="14sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/tv_ingridiant_quantity"
         app:layout_constraintEnd_toStartOf="@+id/tv_ingridiant_quantity"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,6 +40,7 @@
         android:layout_height="wrap_content"
         android:text="TextView"
         android:textSize="14sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/iv_ingrediant"
         app:layout_constraintEnd_toStartOf="@+id/iv_ingrediant"
         app:layout_constraintHorizontal_bias="0.715"
