--- a/app/src/main/res/layout/igrediant_search_iteam.xml
+++ b/app/src/main/res/layout/igrediant_search_iteam.xml
@@ -21,7 +21,6 @@
             style="@style/Card"
             android:layout_width="match_parent"
             android:layout_height="135dp"
-            android:background="#272727"
             android:padding="5dp">
 
             <androidx.cardview.widget.CardView
@@ -54,9 +53,8 @@
                 android:gravity="center"
                 android:text="TextView"
                 android:textColor="#ff9417"
-                android:textSize="12sp"
-                android:textColor="#F99417"
                 android:textSize="14sp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
