--- a/app/src/main/res/values-ar-rEG/strings.ar.xml
+++ b/app/src/main/res/values-ar-rEG/strings.ar.xml
@@ -56,10 +56,12 @@
     <string name="login_as_gest">welcome you are in right app </string>
     <string name="delete">مسح</string>
     <string name="cancel">الغاء</string>
-    <string name="delete_from_plan">Are you sure you want to delete this meal from your plan?
+    <string name="delete_from_plan">هل انت متاكد انك تريد حذف هذه الوجبة من خطتك؟
  </string>
 
-    <string name="delete_from_favourit">Are you sure you want to delete this meal from your favorite list??
+    <string name="delete_from_favourit">هل انت متاكد انك تريد حذف هذه الوجبة من قائمتك المفضلة؟
+ </string>
+    <string name="message_for_login">عذرا, يجب ان تقوم بتسجيل الدخول لكي تستمع بهذه الخاصية
  </string>
 
 
