--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,9 +58,10 @@
         android:layout_height="696dp"
         android:fillViewport="true"
         android:padding="10dp"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/wifi_img_main">
+        app:layout_constraintTop_toBottomOf="@+id/textView2">
 
         <LinearLayout
             style="@style/Screen"
@@ -135,6 +136,7 @@
         android:background="@color/theme"
         android:backgroundTint="@color/theme"
         android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
@@ -144,12 +146,15 @@
         android:id="@+id/oops_tv_main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="12dp"
         android:text="@string/oops"
         android:textSize="18sp"
         android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/noInternet_tv_main"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/wifi_img_main" />
+        app:layout_constraintTop_toBottomOf="@+id/wifi_img_main"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/noInternet_tv_main"
@@ -160,20 +165,21 @@
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/btn_rety_main"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/wifi_img_main" />
+        app:layout_constraintTop_toBottomOf="@+id/wifi_img_main"
+        app:layout_constraintVertical_bias="0.753" />
 
     <Button
         android:id="@+id/btn_rety_main"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="80dp"
         android:layout_marginTop="100dp"
-        android:layout_marginRight="80dp"
         android:backgroundTint="#fe7e34"
         android:text="@string/rety"
         android:textColor="@color/white"
         android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/wifi_img_main" />
 
