--- a/app/src/main/res/layout/activity_meal_data.xml
+++ b/app/src/main/res/layout/activity_meal_data.xml
@@ -80,6 +80,7 @@
         android:layout_marginEnd="2dp"
         android:fillViewport="true"
         android:paddingBottom="50dp"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -187,7 +188,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:padding="8dp">
 
 
                 <androidx.appcompat.widget.AppCompatAutoCompleteTextView
@@ -216,7 +218,7 @@
 
                 <Button
                     android:id="@+id/btn_add_to_fav_de"
-                    android:layout_width="30dp"
+                    android:layout_width="20dp"
                     android:layout_height="30dp"
                     android:layout_marginVertical="10dp"
                     android:layout_marginRight="10dp"
@@ -232,6 +234,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+                android:paddingBottom="8dp"
                 android:text="@string/Meal_instructions"
                 android:textColor="#FF9800"
                 android:textSize="18sp" />
